@@ -436,13 +436,35 @@ class WCS_Admin_Post_Types {
 
 	/**
 	 * Output custom columns for subscriptions
-	 * @param  string $column
+	 * @param string $column
 	 */
 	public function render_shop_subscription_columns( $column ) {
 		global $post, $the_subscription, $wp_list_table;
 
 		if ( empty( $the_subscription ) || $the_subscription->get_id() != $post->ID ) {
 			$the_subscription = wcs_get_subscription( $post->ID );
+		}
+
+		// If the subscription failed to load, only display the ID.
+		if ( empty( $the_subscription ) ) {
+			if ( 'order_title' === $column ) {
+				// translators: placeholder is a subscription ID.
+				echo '<strong>' . sprintf( esc_html_x( '#%s', 'hash before subscription number', 'woocommerce-subscriptions' ), esc_html( $post->ID ) ) . '</strong>';
+				?>
+				<div class="wcs-unknown-order-info-wrapper">
+					<a href="https://woocommerce.com/document/subscriptions/store-manager-guide/#section-18">
+						<?php
+						// Translators: Placeholder is a <br> HTML tag.
+						echo wcs_help_tip( sprintf( __( "This subscription couldn't be loaded from the database. %s Click to learn more.", 'woocommerce-subscriptions' ), '</br>' ) ); // phpcs:ignore WordPress.Security.EscapeOutput.OutputNotEscaped
+						?>
+					</a>
+				</div>
+				<?php
+			} else {
+				echo '&mdash;';
+			}
+
+			return;
 		}
 
 		$column_content = '';
